Corrección warnings SQL